--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 
     <queries>
         <intent>
-<!--            no need for android 12 but this will make sure that it work on android 11        -->
-            <action android:name="android.intent.action.TTS_SERVICE"/>
+
+            <!-- no need for android 12 but this will make sure that it work on android 11 -->
+            <action android:name="android.intent.action.TTS_SERVICE" />
         </intent>
     </queries>
 
@@ -19,6 +20,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.7MinutesWorkout"
         tools:targetApi="31">
+        <activity
+            android:name=".FinishActivity"
+            android:exported="false"
+            android:label="@string/title_activity_finish"
+            android:theme="@style/Theme.7MinutesWorkout.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".ExerciseActivity"
             android:exported="false">
